[gd_scene load_steps=8 format=3 uid="uid://cnofchhl0ms7b"]

[ext_resource type="FontFile" uid="uid://c66yufs1avq5i" path="res://Graphics/HUD/LevelCards/font/smallfont5.png" id="1_5hbdl"]
[ext_resource type="Texture2D" uid="uid://c6br1a0muusrs" path="res://Graphics/HUD/hud_continue.png" id="1_74a44"]
[ext_resource type="Texture2D" uid="uid://4lhg0ovh1pe8" path="res://Graphics/Players/Sonic.png" id="1_b8hfs"]
[ext_resource type="Script" path="res://Scripts/Level/Continue.gd" id="1_iq537"]
[ext_resource type="AudioStream" uid="uid://dsjw4fa8delw4" path="res://Audio/SFX/Player/Death.wav" id="5_2s338"]
[ext_resource type="AudioStream" uid="uid://dnyw7remih6op" path="res://Audio/Soundtrack/8. SWD_GameOver.ogg" id="6_knjfh"]
[ext_resource type="AudioStream" uid="uid://cy0i0dbqpb5eu" path="res://Audio/SFX/Misc/Emerald.wav" id="6_vfsha"]

[node name="Continue" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Spotlight" type="Sprite2D" parent="UI"]
position = Vector2(161, 164)
texture = ExtResource("1_74a44")
region_enabled = true
region_rect = Rect2(0, 15, 48, 13)

[node name="Characters" type="Node2D" parent="UI"]

[node name="Sonic" type="Sprite2D" parent="UI/Characters"]
position = Vector2(160, 141)
texture = ExtResource("1_b8hfs")
region_enabled = true
region_rect = Rect2(679, 196, 34, 43)

[node name="Labels" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Count" type="Control" parent="UI/Labels"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iq537")

[node name="Timer" type="Timer" parent="UI/Labels/Count"]
process_callback = 0

[node name="CountdownLabel" type="Label" parent="UI/Labels/Count/Timer"]
anchors_preset = -1
anchor_left = 0.497
anchor_top = 0.455
anchor_right = 0.497
anchor_bottom = 0.455
offset_left = -6.04001
offset_top = -3.92003
offset_right = 9.95999
offset_bottom = 4.07997
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "00"
uppercase = true

[node name="Star" type="Sprite2D" parent="UI/Labels/Count"]
position = Vector2(146, 101)
texture = ExtResource("1_74a44")
region_enabled = true
region_rect = Rect2(19, 0, 9, 10)

[node name="Star2" type="Sprite2D" parent="UI/Labels/Count"]
position = Vector2(173, 101)
texture = ExtResource("1_74a44")
region_enabled = true
region_rect = Rect2(19, 0, 9, 10)

[node name="Continue" type="Label" parent="UI/Labels"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.321429
anchor_right = 0.5
anchor_bottom = 0.321429
offset_left = -68.0
offset_top = -11.5
offset_right = 68.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_5hbdl")
text = "Continue"
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_2s338")

[node name="ContinueSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_vfsha")

[node name="CountdownMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_knjfh")

[connection signal="timeout" from="UI/Labels/Count/Timer" to="UI/Labels/Count" method="_on_timer_timeout"]
